Fixed instagram images overflowing on desktop

--- a/files/css/style.css
+++ b/files/css/style.css
@@ -808,7 +808,7 @@ form .col-md-12 textarea {
 
 /*INSTAGRAM*/
 .instafeed {
-  height: 615px;
+  height: 595px;
   overflow: hidden;
   display: block;
   margin: 0 auto;
